--- a/My Portfolio.xcodeproj/xcshareddata/xcschemes/My Portfolio.xcscheme
+++ b/My Portfolio.xcodeproj/xcshareddata/xcschemes/My Portfolio.xcscheme
@@ -82,6 +82,9 @@
             ReferencedContainer = "container:My Portfolio.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <StoreKitConfigurationFileReference
+         identifier = "../../My Portfolio/Controllers/Configuration.storekit">
+      </StoreKitConfigurationFileReference>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
