Changed Shortcut Title

--- a/My Portfolio/Configuration/My-Portfolio-Info.plist
+++ b/My Portfolio/Configuration/My-Portfolio-Info.plist
@@ -17,6 +17,10 @@
 			</array>
 		</dict>
 	</array>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>co.jdocampom.myPortfolio.newProject</string>
+	</array>
 	<key>UIApplicationShortcutItems</key>
 	<array>
 		<dict>
