--- a/PortfolioWidgetExtension.entitlements
+++ b/PortfolioWidgetExtension.entitlements
@@ -4,7 +4,7 @@
 <dict>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.co.jdocampom.My-Portfolio</string>
+		<string>co.jdocampom.ProjectAssistant</string>
 	</array>
 </dict>
 </plist>
