--- a/ProjectAssistant/Configuration/My Portfolio.entitlements
+++ b/ProjectAssistant/Configuration/My Portfolio.entitlements
@@ -4,14 +4,20 @@
 <dict>
 	<key>aps-environment</key>
 	<string>development</string>
+	<key>com.apple.developer.applesignin</key>
+	<array>
+		<string>Default</string>
+	</array>
 	<key>com.apple.developer.icloud-container-identifiers</key>
 	<array>
-		<string>iCloud.co.jdocampom.My-Portfolio</string>
+		<string>iCloud.co.jdocampom.ProjectAssistant</string>
 	</array>
 	<key>com.apple.developer.icloud-services</key>
 	<array>
 		<string>CloudKit</string>
 	</array>
+	<key>com.apple.developer.ubiquity-kvstore-identifier</key>
+	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
 		<string>group.co.jdocampom.My-Portfolio</string>
