--- a/ProjectAssistant/Configuration/My Portfolio.entitlements
+++ b/ProjectAssistant/Configuration/My Portfolio.entitlements
@@ -20,7 +20,7 @@
 	<string>$(TeamIdentifierPrefix)$(CFBundleIdentifier)</string>
 	<key>com.apple.security.application-groups</key>
 	<array>
-		<string>group.co.jdocampom.My-Portfolio</string>
+		<string>group.co.jdocampom.ProjectAssistant</string>
 	</array>
 </dict>
 </plist>
